--- a/templates/header.html
+++ b/templates/header.html
@@ -70,7 +70,7 @@
                     {% endif %}
                     
                     <a href="{% url 'shop:cart' %}"><button class="btn" style="color: white;"
-                        type="submit"><img src="{% static 'img/cart.jpg'%}" style="width: 40px;"></button></a>
+                        type="submit"><img src="{% static 'img/cart1.png'%}" style="width: 40px;"></button></a>
                         <sup id="cart-total" style="color: white; background-color: red; border-radius: 50%;font-size: 25px;">{{order.get_cart_items}}</sup>
                 </ul>
                 </div>
