--- a/templates/login.html
+++ b/templates/login.html
@@ -29,7 +29,7 @@
         <div class="mb-3 form-check">
 
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">Login</button>
         <button class = "btn btn-primary"><a style="color: #ffffff; text-decoration:none;" href="{% url 'accounts:register' %}">Create New User</a></button>
     </form>
 </body>
